# speciesnet-image-sorter

./: .databricksignore  .gitignore  .pre-commit-config.yaml  README.md  app.yml  main.py  pyproject.toml  pytest.ini  requirements.txt  streamlit_app.py  streamlit_main.py  streamlit_utils.py
.github/workflows/: lint.yaml  pytest.yaml
app/: file_operations.py  folder_buttonwidget.py  image_loader.py  image_viewer.py  logs_window.py  megadetector_buttonwidget.py  speciesnet_buttonwidget.py  thumbnail_creator.py  worker.py
app/weights/: README.md  download_weights.py
st_app/: streamlit_app.py  streamlit_utils.py
tests/: README.md  __init__.py  conftest.py  test_file_operations.py  test_folder_buttonwidget.py  test_image_loader.py  test_logs_window.py  test_thumbnail_creator.py  test_worker.py
tests/pyqt/: conftest.py  test_folder_buttonwidget.py  test_image_loader.py  test_thumbnail_creator.py  test_worker.py
tests/streamlit/: test_streamlit_app.py
